src/test/deca/syntax/valid/homemade/lexer/test/test_lex_val_tous_les_mots_reserves.deca
// Description:
//    Programme minimaliste testant la reconnaissance de tous les mots réservés
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023

asm 
class 
extends 
else 
false 
if
instanceof 
new 
null 
readInt 
readFloat 
print
println 
printlnx 
printx 
protected 
return 
this
true 
while